--- a/styles.css
+++ b/styles.css
@@ -13,18 +13,18 @@ body{
     height: 60px;
     }
  nav {
-     background-color: ffff;
+     background-color:#FF005C;
      padding: 0px;
      display: flex;
      flex-direction: row;
  }
  nav a {
      text-decoration:none;
-     font-size: 18px;
-     color: #F12EA3;
+     font-size: 16px;
+     color: white;
  }
  nav a:hover{
-     color: black;
+     color: #23FFD7;
  }
 .navgation {
     margin: 5px;
@@ -33,7 +33,7 @@ body{
 }
 .navgation.studioname a {
     color: #0F1A35;
-    font-size: 24px;
+    font-size: 18px;
     position: relative;
     left: -15px;
 }
@@ -50,16 +50,7 @@ ul{
 li{
     list-style-type: none;
     margin: 0px;
-    font-size: 10px;
     display: inline;
-    margin: 20px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 10px;
-    line-height: 21px;
-    align-items: center;
-    text-align: center;
-    color: #F12EA3;
 }
 .Studio-Logo {
     width: 100px;
